fix: Improve handling of complex regexes through call chains and report regexes which could not be translate into concrete strings